# krpc

./: .bazelignore  .bazelrc  .clang-format  .clang-tidy  .gitattributes  .gitignore  .travis.yml  .version  .version.template  BUILD  BUILD.bazel  Building Guidance with Microsoft Visual Stutio (MSVC) (en_US) (Read Directly).md  Building Guidance with Microsoft Visual Stutio (MSVC) (zh_CN) (Read Directly).md  Building Guidance with Microsoft Visual Stutio (MSVC) (zh_CN) (Read via VSCode).md  CHANGELOG.md  CHANGELOG.txt  CHANGES.txt  CLAUDE.md  COMPILE.md  CONTRIBUTING.md  Contributing.md  Development-Guide.md  KRPC.sln  LICENSE  LICENSE.txt  MODULE.bazel  Makefile  README.md  Release-Guide.md  WINDOWS_BUILDING.md  WORKSPACE  WORKSPACE.bazel  build-out  config.bzl  hey  index.html  kRPC.sln  maven_install.json  pytest.ini  switcher.json  (+1 more)
client/cnano/: BUILD  BUILD.bazel  CHANGELOG.md  CHANGES.txt  CMakeLists.txt.tmpl  INSTALL.txt  LICENSE  Makefile.am  README.txt  cog.sh  configure.ac.tmpl  iwyu.sh  test-build-windows.sh  test-build.sh  test-cmake-linux.sh  test-cmake-windows.sh  test-vcpkg-linux.sh  test-vcpkg-windows.sh
client/cnano/cmake/: krpc_cnanoConfig.cmake.in
client/cnano/include/: Makefile.am  krpc.h  krpc_cnano.h
client/cnano/src/: Makefile.am  communication.c  decoder.c  encoder.c  error.c  krpc.c  krpc.options  memory.c  utils.c
client/cnano/test/: server_test.hpp  test_client.cpp  test_communication.cpp  test_decoder.cpp  test_encode_decode.cpp  test_encoder.cpp  test_utils.cpp  testing_tools.hpp
client/cnano/vcpkg-port/: portfile.cmake  vcpkg.json
client/cpp/: BUILD  BUILD.bazel  CHANGELOG.md  CHANGES.txt  CMakeLists.txt.tmpl  INSTALL.txt  LICENSE  Makefile  Makefile.am  README.txt  configure.ac.tmpl  configure.ac.tmpl_  generate.bzl  generate.py  iwyu.sh  protobuf-include.cmake  test-build.sh  test-cmake-linux.sh  test-cmake-windows.sh  test-vcpkg-linux.sh  test-vcpkg-windows.sh
client/cpp/cmake/: FindAsio.cmake  krpcConfig.cmake.in
client/cpp/include/: Makefile.am  krpc.hpp
client/cpp/src/: Makefile.am  client.cpp  connection.cpp  decoder.cpp  encoder.cpp  event.cpp  krpc.cpp  platform.cpp  (+3 more)
client/csharp/: BUILD  BUILD.bazel  CHANGELOG.md  CHANGES.txt  InternalsVisibleTo.cs  LICENSE  README.md  generate.bzl  generate.py  generate.tmpl
client/java/: BUILD  BUILD.bazel  CHANGELOG.md  CHANGES.txt  README.txt
client/python/: BUILD  BUILD.bazel  CHANGELOG.md  CHANGES.txt  LICENSE  MANIFEST.in  Makefile  README.md  README.txt  pep8.ini  pycodestyle.ini  pylint.rc  pyproject.toml  setup.py
client/serialio/: BUILD  BUILD.bazel  README.txt  pylint.rc  pyproject.toml  setup.py
client/websockets/: BUILD  BUILD.bazel  README.txt  pylint.rc  pyproject.toml  setup.py
core/: BUILD  BUILD.bazel  CHANGELOG.md  CHANGES.txt  InternalsVisibleTo.cs
core/src/: Configuration.cs  Core.cs  KRPC.Core.csproj  ignores.txt
core/test/: KRPC.Core.Test.csproj  TestingTools.cs
doc/: .gitignore  BUILD  BUILD.bazel  Makefile  README.md  STAGING_MIGRATION.md  auto-build-api.sh  build-api.py  changelog.bzl  changeloggen.py  check-api.py  check_documented.bzl  check_scripts_mypy.py  conf.py.tmpl  gen_docs_index.py  generate  generate.bzl  generate.py  get-api.py  macros.bzl  order.txt  serve  serve.py  serve_docs.py  test.bzl  test.py  wscript
doc/api/: auto-pilot.rst  celestial-body.rst  comms.rst  control.rst  directives.py  docking-camera.tmpl  domain.py  drawing.tmpl  enumeration-types.rst  flight.rst  infernal-robotics.rst  infernal-robotics.tmpl  kerbal-alarm-clock.rst  kerbal-alarm-clock.tmpl  krpc.tmpl  lidar.tmpl  lua.py  node.rst  options.py  orbit.rst  parts.rst  python.py  reference-frame.rst  remote-tech.tmpl  resources.rst  space-center.rst  space-center.tmpl  ui.tmpl  utils.py  vessel-resources.rst  vessel.rst
doc/lib/: cpp.py  csharp.py  docparser.py  extensions.py  lua.py  nodes.py  python.py  python.tmpl  utils.py
doc/src/: cnano.rst  communication-protocol.rst  communication-protocols.rst  compiling.rst  conf.py  cpp.rst  csharp.rst  dictionary.txt  examples.rst  extending.rst  getting-started.rst  index.rst  infernal-robotics-api.rst  internals.rst  intro.rst  java.rst  kerbal-alarm-clock-api.rst  lua.rst  python-api.rst  python-client.rst  python.rst  space-center-api.rst  third-party.rst  tutorials.rst
lib/: BUILD  BUILD.bazel  generate.py  ksp  ksp.bzl  mono-4.5
lib/moq-4.2.1507.0118/: license.txt
lib/nunit-2.6.3/: license.txt
lib/protobuf/: Google.Protobuf.xml
lib/toolbar/: LICENSE.txt
protobuf/: BUILD  BUILD.bazel  LICENSE  krpc.proto  test.proto
server/: BUILD  BUILD.bazel  CHANGELOG.md  CHANGES.txt
server/src/: Addon.cs  AssemblyInfo.cs.tmpl  Compatibility.cs  CompatibilityChecker.cs  Configuration.cs  ConfigurationFile.cs  Core.cs  KRPC.csproj  KRPCAddon.cs  KRPCConfiguration.cs  KRPCCore.cs  KRPCServer.cs  ServicesChecker.cs  ignores.txt  kRPC.csproj
server/test/: BUILD  ConfigurationTest.cs  KRPC.Test.csproj  KRPCConfigurationTest.cs  TestingTools.cs  ignores.txt  kRPCTest.csproj  packages.config
service/DebugTools/: BUILD.bazel
service/DockingCamera/: BUILD  BUILD.bazel  CHANGELOG.md  CHANGES.txt
service/Drawing/: BUILD  BUILD.bazel  CHANGELOG.md  CHANGES.txt
service/InfernalRobotics/: Addon.cs  BUILD  BUILD.bazel  CHANGELOG.md  CHANGES.txt  IRWrapper.cs  KRPC.InfernalRobotics.csproj  kRPCInfernalRobotics.csproj  pylint.rc
service/KerbalAlarmClock/: BUILD  BUILD.bazel  CHANGELOG.md  CHANGES.txt  KACWrapper.cs  KRPC.KerbalAlarmClock.csproj  kRPCKerbalAlarmClock.csproj
service/LiDAR/: BUILD  BUILD.bazel  CHANGELOG.md  CHANGES.txt
service/SpaceCenter/: BUILD  BUILD.bazel  CHANGELOG.md  CHANGES.txt  InternalsVisibleTo.cs  KRPC.SpaceCenter.csproj  LICENSE  PilotAddon.cs  kRPCSpaceCenter.csproj  pylint.rc
service/docking_camera/: BUILD.bazel
service/drawing/: BUILD.bazel
service/infernal_robotics/: BUILD.bazel
service/kerbal_alarm_clock/: BUILD.bazel  CHANGES.txt
service/remote_tech/: BUILD.bazel  CHANGES.txt
service/space_center/: BUILD.bazel  CHANGES.txt
service/ui/: BUILD.bazel  CHANGES.txt
(+5091 files in other folders)
